--- a/index.html
+++ b/index.html
@@ -990,8 +990,8 @@
           </div>
         </div>
         <div class="footnote text-center pt-4">
-        <p>IBSTogether - Supporting our community since 2024</p>
-      </div>
+          <p>IBSTogether - Supporting our community since 2024</p>
+        </div>
       </div>
     </section>
     <footer class="footer" role="contentinfo">
@@ -1056,6 +1056,15 @@
         </div>
       </div>
     </footer>
+
+    <!-- Back Button -->
+<a id="backButton" href="javascript:void(0);" class="back-btn d-flex align-items-center">
+    <img src="assets/icons/top_arrow.png" alt="Back" class="back-icon"> Top
+</a>
+
+
+
+
     <!-- ========== All JS Link  -->
     <script src="assets/js/jquery-1.12.4.min.js"></script>
     <script src="assets/js/bootstrap.min.js"></script>
