--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav me-auto mb-2 mb-lg-0 d-none d-lg-none">
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="#">Home</a>
+              <a class="nav-link active" aria-current="page" href="#"><i class="bi bi-house-fill icon me-2"></i>Home</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="#">My IBS Story</a>
@@ -147,14 +147,23 @@
 
             <ul class="navbar-nav me-auto mb-2 mb-lg-0 mt-3">
               <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="#">Home</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="#">My IBS Story</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="#">Treatment Reviews</a>
-              </li>
+                  <a class="nav-link active" aria-current="page" href="#"
+                    ><i class="bi bi-house-fill icon me-2"></i>Home</a
+                  >
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="#"><i class="bi bi-book-fill me-2"></i>My IBS Story</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="#"><i class="bi bi-capsule me-2"></i>Treatment Reviews</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="#"><i class="bi bi-newspaper me-2"></i> Recent News</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="#"><i class="bi bi-people-fill"></i>
+  Community Stories</a>
+                </li>
             </ul>
 
             <div class="btn-holder mt-3 mb-3">
@@ -185,14 +194,21 @@
               <ul class="d-flex justify-content-center">
                 <li class="nav-item">
                   <a class="nav-link active" aria-current="page" href="#"
-                    >Home</a
+                    ><i class="bi bi-house-fill icon me-2"></i>Home</a
                   >
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="#">My IBS Story</a>
+                  <a class="nav-link" href="#"><i class="bi bi-book-fill me-2"></i>My IBS Story</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="#">Treatment Reviews</a>
+                  <a class="nav-link" href="#"><i class="bi bi-capsule me-2"></i>Treatment Reviews</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="#"><i class="bi bi-newspaper me-2"></i> Recent News</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="#"><i class="bi bi-people-fill"></i>
+  Community Stories</a>
                 </li>
               </ul>
             </div>
@@ -203,7 +219,7 @@
     <!-- ========== Navbar Css Here End  -->
     <!-- Subscribe Section -->
     <!-- Subscribe Section -->
-    <section class="subscribe-section">
+    <!-- <section class="subscribe-section">
       <div class="container">
         <h2>Stay Updated with IBSTogether</h2>
         <form class="subscribe-form">
@@ -211,7 +227,7 @@
           <button type="submit">Subscribe</button>
         </form>
       </div>
-    </section>
+    </section> -->
 
     <!-- Stories Section -->
     <section class="stories-section">
